--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -104,8 +104,12 @@
         <h2>🎧 Connecte-toi 🎧</h2>
 
         <form method="post">
+
             <input type="text" name="_username" placeholder="🎧 Nom d'utilisateur" required>
             <input type="password" name="_password" placeholder="🔒 Mot de passe" required>
+
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
             {% if error %}
                 <p class="error">{{ error.messageKey|trans(error.messageData, 'security') }}</p>
             {% endif %}
@@ -115,5 +119,6 @@
                 <button type="button" onclick="window.location.href='/register'">Inscription</button>
             </div>
         </form>
+
     </div>
 {% endblock %}
