--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,3 +2,6 @@
     <a href="{{ path('app_home') }}">Accueil</a>
     <a href="{{ path('app_logout') }}">Déconnexion</a>
 </nav>
+
+{% block body %}
+{% endblock %}
