--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -62,6 +62,13 @@
 
     {% if app.user %}
         <p>Vous êtes connecté en tant que <strong>{{ app.user.email }}</strong>.</p>
+
+        <div>
+            <a href="{{ path('app_user') }}" class="btn">Liste des utilisateurs</a>
+            <a href="{{ path('app_event') }}" class="btn">Liste des evenements</a>
+            <a href="{{ path('app_artist') }}" class="btn">Liste des artistes</a>
+<br><br>
+        </div>
         <a href="{{ path('app_logout') }}" class="btn">Déconnexion</a>
     {% endif %}
 {% endblock %}
