user artist et event page OK
a passer sous react !!!

--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -64,7 +64,9 @@
         <p>Vous êtes connecté en tant que <strong>{{ app.user.email }}</strong>.</p>
 
         <div>
+            {%if app.user.roles[0] == 'ROLE_ADMIN'%}
             <a href="{{ path('app_user') }}" class="btn">Liste des utilisateurs</a>
+            {%endif%}
             <a href="{{ path('app_event') }}" class="btn">Liste des evenements</a>
             <a href="{{ path('app_artist') }}" class="btn">Liste des artistes</a>
 <br><br>
