--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,4 @@
 <nav>
     <a href="{{ path('app_home') }}">Accueil</a>
-    <a href="{{ path('app_logout') }}">Déconnexion</a>
+    <a href="{{ path('npm create vite@latestapp_logout') }}">Déconnexion</a>
 </nav>
