--- a/templates/artist/artist.html.twig
+++ b/templates/artist/artist.html.twig
@@ -115,5 +115,8 @@
         <p>Aucun artiste trouvé.</p>
     {% endif %}
 
+
+    <h1>{{user.roles}}</h1>
+
     <a href="{{ path('app_home') }}" class="btn">Retour à l'accueil</a>
 {% endblock %}
