--- a/templates/artist/createArtist.html.twig
+++ b/templates/artist/createArtist.html.twig
@@ -1,11 +1,12 @@
 <div>
+{{ form_start(createArtist) }}
     {{ form_errors(createArtist) }}
     {{ form_start(createArtist) }}
     {{ form_row(createArtist.name) }}
     {{ form_row(createArtist.description) }}
     {{ form_row(createArtist.imagePath) }}
 
-    {{ form_end(createArtist) }}
+{{ form_end(createArtist) }}
 
 <button type="submit">Create artist</button>
 
