--- a/templates/artist/EditArtist.html.twig
+++ b/templates/artist/EditArtist.html.twig
@@ -103,17 +103,18 @@
 
 
 
-<div>
-    {{ form_errors(createArtist) }}
-    {{ form_start(createArtist) }}
+    <div>
+        {{ form_errors(createArtist) }}
+        {{ form_start(createArtist) }}
 
-    {{ form_row(createArtist.name) }}
-    {{ form_row(createArtist.description) }}
-    {{ form_row(createArtist.imagePath) }}
+        {{ form_row(createArtist.name) }}
+        {{ form_row(createArtist.description) }}
+        {{ form_row(createArtist.imagePath) }}
 
 
 
-<button type="submit">Create artist<button/>
-    {{ form_end(createArtist) }}
-</div>
+        <button type="submit">Create artist<button/>
+            <a href="{{ path('app_artist') }}" class="btn">Retour à la liste des artistes</a>
+            {{ form_end(createArtist) }}
+    </div>
 {% endblock %}
