--- a/templates/user/user.html.twig
+++ b/templates/user/user.html.twig
@@ -87,6 +87,7 @@
             <tbody>
             {% for user in users %}
                 <tr>
+{#                    <td>{{ user.id }}</td>#}
                     <td>{{ user.email }}</td>
                 </tr>
             {% endfor %}
