--- a/React/src/pages/CSS/Artists.css
+++ b/React/src/pages/CSS/Artists.css
@@ -81,4 +81,22 @@ a:hover {
   border-radius: 3px;  /* Coins légèrement arrondis */
   box-shadow: 0 0 5px rgba(0, 255, 255, 0.5);
 }
+#root {
+  text-align: left;
+}
 
+.input-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 1rem;
+}
+
+.submit {
+  margin-top: 1rem;
+  background-color: #4f8c00;
+}
+
+.submit:hover {
+  border-color: #d6d8fa;
+}
